fix footer width bug on mobile version

--- a/public/style.css
+++ b/public/style.css
@@ -35,20 +35,6 @@ header {
   margin-left: 0;
 }
 
-@media only screen and (max-width: 600px) {
-  .m-blue {
-    width: calc(100% - 2vw);
-    margin-bottom: 0%;
-    order: -1;
-  }
-  .aside-g {
-    width: calc(50% - 1.5vw);
-  }
-  .aside-p {
-    margin-left: 1vw;
-    width: calc(50% - 1.5vw);
-  }
-}
 @media only screen and (max-width: 1100px) and (min-width: 600px) {
   .m-blue {
     width: 73vw;
@@ -60,6 +46,20 @@ header {
     width: 98vw;
     margin-top: 0%;
     margin-left: 1vw;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .m-blue {
+    width: calc(100% - 2vw);
+    margin-bottom: 0%;
+    order: -1;
+  }
+  .aside-g {
+    width: 48.5vw;
+  }
+  .aside-p {
+    margin-left: 1vw;
+    width: 48.5vw;
   }
 }
 @keyframes animate {
