--- a/scss/media-queries/_mobile.scss
+++ b/scss/media-queries/_mobile.scss
@@ -9,11 +9,11 @@
     }
 
     .aside-g {
-        width: calc(50% - 1.5vw);
+        width: calc(50vw - 1.5vw);
     }
 
     .aside-p {
         margin-left: 1vw;
-        width: calc(50% - 1.5vw);
+        width: calc(50vw - 1.5vw);
     }
 }
